--- a/CustomWindow/Extended.xaml
+++ b/CustomWindow/Extended.xaml
@@ -9,13 +9,16 @@
         ResizeMode="NoResize"
         WindowStyle="None"
         WindowStartupLocation="Manual"
-        Title="Extended" Height="800" Width="1200">
+        Title="Extended" Height="800" Width="1200"
+        Icon="/Assets/Icons/monitors-icon.png">
 
-    <Grid>
-        <StackPanel Margin="50">
-            <Label Grid.Row="0" x:Name="ExtendedLabelText" Content="The Winner is" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="60" FontFamily="Calibri" FontWeight="Bold"/>
-            <TextBlock Grid.Row="1" x:Name="Number" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="400"
-                   Text="0" FontWeight="Bold"/>
-        </StackPanel>
+    <Grid Margin="50">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="90*"/>
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" x:Name="ExtendedLabelText" Content="The Winner is" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="60" FontFamily="Calibri" FontWeight="Bold"/>
+            <TextBlock Grid.Row="1" x:Name="Selected" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="150"
+                   FontWeight="Bold"/>
     </Grid>
 </Window>
